--- a/public/css/app.css
+++ b/public/css/app.css
@@ -352,7 +352,7 @@ ul {
  */
 
 html {
-  font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
+  font-family: ui-sans-serif, system-ui; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
@@ -514,7 +514,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular;
 }
 
 /**
@@ -1187,12 +1187,6 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.-ml-4 {
-	margin-left: -1rem;
-}
-.-mt-2 {
-	margin-top: -0.5rem;
-}
 .block {
 	display: block;
 }
@@ -1294,6 +1288,9 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-4xl {
+	max-width: 56rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1636,6 +1633,12 @@ select {
 .pt-8 {
 	padding-top: 2rem;
 }
+.pb-20 {
+	padding-bottom: 5rem;
+}
+.pt-16 {
+	padding-top: 4rem;
+}
 .text-left {
 	text-align: left;
 }
@@ -1646,10 +1649,10 @@ select {
 	text-align: right;
 }
 .font-sans {
-	font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-family: ui-sans-serif, system-ui;
 }
 .font-mono {
-	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+	font-family: ui-monospace, SFMono-Regular;
 }
 .text-sm {
 	font-size: 0.875rem;
@@ -1675,11 +1678,18 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
 .font-medium {
 	font-weight: 500;
 }
 .font-semibold {
 	font-weight: 600;
+}
+.font-extrabold {
+	font-weight: 800;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -1695,9 +1705,6 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
-}
-.leading-6 {
-	line-height: 1.5rem;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -1870,6 +1877,15 @@ select {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.p-carousel .p-carousel-content .p-carousel-prev,
+.p-carousel .p-carousel-content .p-carousel-next {
+    box-shadow: -2 px 4 px 10 px 0 var(--shadow--dark);
+    height: 48 px;
+    width: 48 px;
+}
+.p-carousel-indicators{
+    display: hidden!important;
+}
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1897,10 +1913,6 @@ select {
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.hover\:bg-indigo-700:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -1994,11 +2006,6 @@ select {
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring-2:focus {
-	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .focus\:ring-gray-300:focus {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(209, 213, 219, var(--tw-ring-opacity));
@@ -2015,15 +2022,8 @@ select {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity));
 }
-.focus\:ring-indigo-500:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
-}
 .focus\:ring-opacity-50:focus {
 	--tw-ring-opacity: 0.5;
-}
-.focus\:ring-offset-2:focus {
-	--tw-ring-offset-width: 2px;
 }
 .active\:bg-gray-100:active {
 	--tw-bg-opacity: 1;
@@ -2174,10 +2174,6 @@ select {
 		transform: var(--tw-transform);
 	}
 
-	.sm\:flex-nowrap {
-		flex-wrap: nowrap;
-	}
-
 	.sm\:items-start {
 		align-items: flex-start;
 	}
@@ -2249,12 +2245,25 @@ select {
 		padding-bottom: 1rem;
 	}
 
+	.sm\:pt-24 {
+		padding-top: 6rem;
+	}
+
 	.sm\:text-left {
 		text-align: left;
 	}
 
 	.sm\:text-right {
 		text-align: right;
+	}
+
+	.sm\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.sm\:tracking-tight {
+		letter-spacing: -0.025em;
 	}
 }
 @media (min-width: 768px) {
@@ -2305,5 +2314,9 @@ select {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
-}
 
+	.lg\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
+	}
+}
