--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.2.17 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /*
 Document
@@ -1105,11 +1105,11 @@ select {
 .z-50 {
 	z-index: 50;
 }
-.z-20 {
-	z-index: 20;
-}
 .z-40 {
 	z-index: 40;
+}
+.z-20 {
+	z-index: 20;
 }
 .col-span-6 {
 	grid-column: span 6 / span 6;
@@ -1117,10 +1117,6 @@ select {
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
-}
-.my-3 {
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1191,23 +1187,20 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.ml-8 {
-	margin-left: 2rem;
+.-mt-px {
+	margin-top: -1px;
 }
 .mb-8 {
 	margin-bottom: 2rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
-}
-.ml-auto {
-	margin-left: auto;
-}
-.-mt-px {
-	margin-top: -1px;
+.ml-8 {
+	margin-left: 2rem;
 }
 .mr-6 {
 	margin-right: 1.5rem;
+}
+.ml-auto {
+	margin-left: auto;
 }
 .block {
 	display: block;
@@ -1217,9 +1210,6 @@ select {
 }
 .inline-flex {
 	display: inline-flex;
-}
-.table {
-	display: table;
 }
 .grid {
 	display: grid;
@@ -1319,9 +1309,6 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
-}
-.max-w-sm {
-	max-width: 24rem;
 }
 .max-w-4xl {
 	max-width: 56rem;
@@ -1439,9 +1426,6 @@ select {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.break-all {
-	word-break: break-all;
-}
 .rounded-md {
 	border-radius: 0.375rem;
 }
@@ -1488,9 +1472,6 @@ select {
 .border-b {
 	border-bottom-width: 1px;
 }
-.border-r {
-	border-right-width: 1px;
-}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1509,10 +1490,6 @@ select {
 .border-gray-100 {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
-}
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1574,9 +1551,6 @@ select {
 .bg-no-repeat {
 	background-repeat: no-repeat;
 }
-.fill-current {
-	fill: currentColor;
-}
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
@@ -1586,9 +1560,6 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
-}
-.p-8 {
-	padding: 2rem;
 }
 .p-3 {
 	padding: 0.75rem;
@@ -1740,14 +1711,14 @@ select {
 .font-semibold {
 	font-weight: 600;
 }
+.font-extrabold {
+	font-weight: 800;
+}
 .font-normal {
 	font-weight: 400;
 }
 .font-bold {
 	font-weight: 700;
-}
-.font-extrabold {
-	font-weight: 800;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -1769,9 +1740,6 @@ select {
 }
 .tracking-wide {
 	letter-spacing: 0.025em;
-}
-.tracking-wider {
-	letter-spacing: 0.05em;
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
@@ -1832,18 +1800,6 @@ select {
 .text-green-500 {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
-}
-.text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-.text-gray-200 {
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-.text-gray-300 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1952,7 +1908,7 @@ select {
     width: 48 px;
 }
 .p-carousel-indicators{
-    display: hidden!important;
+    display: none!important;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
