--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1118,6 +1118,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1193,14 +1197,17 @@ select {
 .mb-8 {
 	margin-bottom: 2rem;
 }
-.mr-6 {
-	margin-right: 1.5rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .ml-auto {
 	margin-left: auto;
 }
 .-mt-px {
 	margin-top: -1px;
+}
+.mr-6 {
+	margin-right: 1.5rem;
 }
 .block {
 	display: block;
@@ -1309,6 +1316,9 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-sm {
+	max-width: 24rem;
 }
 .max-w-4xl {
 	max-width: 56rem;
@@ -1472,6 +1482,9 @@ select {
 .border-b {
 	border-bottom-width: 1px;
 }
+.border-r {
+	border-right-width: 1px;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1490,6 +1503,10 @@ select {
 .border-gray-100 {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1560,6 +1577,9 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
+}
+.p-8 {
+	padding: 2rem;
 }
 .p-3 {
 	padding: 0.75rem;
@@ -1741,6 +1761,9 @@ select {
 .tracking-wide {
 	letter-spacing: 0.025em;
 }
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
 .text-gray-500 {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1800,6 +1823,18 @@ select {
 .text-green-500 {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-gray-200 {
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.text-gray-300 {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1909,6 +1944,9 @@ select {
 }
 .p-carousel-indicators{
     display: none!important;
+}
+.product-image {
+    max-width: 480px;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
