--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1114,6 +1114,12 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.m-0 {
+	margin: 0px;
+}
+.-m-4 {
+	margin: -1rem;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1121,6 +1127,14 @@ select {
 .my-3 {
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+.mx-3 {
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1209,6 +1223,21 @@ select {
 .mr-6 {
 	margin-right: 1.5rem;
 }
+.mb-12 {
+	margin-bottom: 3rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.mb-0 {
+	margin-bottom: 0px;
+}
+.mt-0 {
+	margin-top: 0px;
+}
 .block {
 	display: block;
 }
@@ -1253,6 +1282,33 @@ select {
 }
 .h-full {
 	height: 100%;
+}
+.h-screen {
+	height: 100vh;
+}
+.h-64 {
+	height: 16rem;
+}
+.h-32 {
+	height: 8rem;
+}
+.h-48 {
+	height: 12rem;
+}
+.h-60 {
+	height: 15rem;
+}
+.h-2 {
+	height: 0.5rem;
+}
+.h-80 {
+	height: 20rem;
+}
+.h-96 {
+	height: 24rem;
+}
+.h-1\/2 {
+	height: 50%;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1302,6 +1358,27 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-64 {
+	width: 16rem;
+}
+.w-1\/4 {
+	width: 25%;
+}
+.w-1\/3 {
+	width: 33.333333%;
+}
+.w-2\/3 {
+	width: 66.666667%;
+}
+.w-96 {
+	width: 24rem;
+}
+.w-80 {
+	width: 20rem;
+}
+.w-4\/5 {
+	width: 80%;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1323,11 +1400,20 @@ select {
 .max-w-4xl {
 	max-width: 56rem;
 }
+.max-w-md {
+	max-width: 28rem;
+}
+.max-w-lg {
+	max-width: 32rem;
+}
 .flex-1 {
 	flex: 1 1 0%;
 }
 .flex-none {
 	flex: none;
+}
+.flex-auto {
+	flex: 1 1 auto;
 }
 .flex-shrink-0 {
 	flex-shrink: 0;
@@ -1389,6 +1475,12 @@ select {
 .items-center {
 	align-items: center;
 }
+.items-baseline {
+	align-items: baseline;
+}
+.justify-start {
+	justify-content: flex-start;
+}
 .justify-end {
 	justify-content: flex-end;
 }
@@ -1398,6 +1490,12 @@ select {
 .justify-between {
 	justify-content: space-between;
 }
+.justify-around {
+	justify-content: space-around;
+}
+.justify-evenly {
+	justify-content: space-evenly;
+}
 .gap-6 {
 	gap: 1.5rem;
 }
@@ -1406,6 +1504,9 @@ select {
 }
 .gap-1 {
 	gap: 0.25rem;
+}
+.gap-5 {
+	gap: 1.25rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1421,6 +1522,21 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1448,6 +1564,18 @@ select {
 .rounded-full {
 	border-radius: 9999px;
 }
+.rounded-xl {
+	border-radius: 0.75rem;
+}
+.rounded-3xl {
+	border-radius: 1.5rem;
+}
+.rounded-2xl {
+	border-radius: 1rem;
+}
+.rounded-sm {
+	border-radius: 0.125rem;
+}
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
 	border-bottom-left-radius: 0.375rem;
@@ -1463,6 +1591,10 @@ select {
 .rounded-b-none {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
+}
+.rounded-l-xl {
+	border-top-left-radius: 0.75rem;
+	border-bottom-left-radius: 0.75rem;
 }
 .border {
 	border-width: 1px;
@@ -1556,6 +1688,26 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -1572,6 +1724,14 @@ select {
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
+.object-scale-down {
+	-o-object-fit: scale-down;
+	   object-fit: scale-down;
+}
+.object-center {
+	-o-object-position: center;
+	   object-position: center;
+}
 .p-2 {
 	padding: 0.5rem;
 }
@@ -1583,6 +1743,15 @@ select {
 }
 .p-3 {
 	padding: 0.75rem;
+}
+.p-0 {
+	padding: 0px;
+}
+.p-12 {
+	padding: 3rem;
+}
+.p-4 {
+	padding: 1rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1640,6 +1809,10 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
+.px-5 {
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1678,6 +1851,12 @@ select {
 }
 .pt-16 {
 	padding-top: 4rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+.pl-6 {
+	padding-left: 1.5rem;
 }
 .text-left {
 	text-align: left;
@@ -1754,6 +1933,12 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
+}
+.leading-normal {
+	line-height: 1.5;
+}
+.leading-relaxed {
+	line-height: 1.625;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -1835,6 +2020,14 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-blue-700 {
+	--tw-text-opacity: 1;
+	color: rgba(29, 78, 216, var(--tw-text-opacity));
+}
+.text-indigo-300 {
+	--tw-text-opacity: 1;
+	color: rgba(165, 180, 252, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1946,7 +2139,7 @@ select {
     display: none!important;
 }
 .product-image {
-    max-width: 480px;
+    max-height: 150px;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
@@ -1976,6 +2169,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.hover\:bg-gray-800:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1995,6 +2192,14 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-gray-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.hover\:text-green-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2187,12 +2392,28 @@ select {
 		height: 5rem;
 	}
 
+	.sm\:h-52 {
+		height: 13rem;
+	}
+
+	.sm\:h-full {
+		height: 100%;
+	}
+
 	.sm\:w-10 {
 		width: 2.5rem;
 	}
 
 	.sm\:w-full {
 		width: 100%;
+	}
+
+	.sm\:w-3\/5 {
+		width: 60%;
+	}
+
+	.sm\:w-1\/2 {
+		width: 50%;
 	}
 
 	.sm\:max-w-md {
@@ -2236,12 +2457,20 @@ select {
 		transform: var(--tw-transform);
 	}
 
+	.sm\:flex-row {
+		flex-direction: row;
+	}
+
 	.sm\:items-start {
 		align-items: flex-start;
 	}
 
 	.sm\:items-center {
 		align-items: center;
+	}
+
+	.sm\:items-baseline {
+		align-items: baseline;
 	}
 
 	.sm\:justify-start {
@@ -2342,8 +2571,28 @@ select {
 		margin-top: 0px;
 	}
 
+	.md\:mb-0 {
+		margin-bottom: 0px;
+	}
+
 	.md\:grid {
 		display: grid;
+	}
+
+	.md\:w-72 {
+		width: 18rem;
+	}
+
+	.md\:w-2\/5 {
+		width: 40%;
+	}
+
+	.md\:w-3\/5 {
+		width: 60%;
+	}
+
+	.md\:w-96 {
+		width: 24rem;
 	}
 
 	.md\:grid-cols-3 {
@@ -2352,6 +2601,10 @@ select {
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:flex-row {
+		flex-direction: row;
 	}
 
 	.md\:gap-6 {
@@ -2365,11 +2618,36 @@ select {
 	.md\:border-l {
 		border-left-width: 1px;
 	}
+
+	.md\:p-4 {
+		padding: 1rem;
+	}
 }
 @media (min-width: 1024px) {
 
 	.lg\:col-span-4 {
 		grid-column: span 4 / span 4;
+	}
+
+	.lg\:mb-0 {
+		margin-bottom: 0px;
+	}
+
+	.lg\:flex {
+		display: flex;
+	}
+
+	.lg\:h-48 {
+		height: 12rem;
+	}
+
+	.lg\:w-48 {
+		width: 12rem;
+	}
+
+	.lg\:object-cover {
+		-o-object-fit: cover;
+		   object-fit: cover;
 	}
 
 	.lg\:px-8 {
